Bug 325903 - adiumxtra-protocol-handler is broken because UI never shows
Summary: adiumxtra-protocol-handler is broken because UI never shows
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: text-ui (other bugs)
Version First Reported In: git-latest
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-10-11 20:55 UTC by Leon Handreke
Modified: 2013-10-13 13:09 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Leon Handreke 2013-10-11 20:55:29 UTC
When trying to install an Adium theme (by opening a adiumxtra://), the only thing that is shown is a "File copied" notification (not sure where that comes from).

The issue seems to be that the protocol handler uses notifications as its main UI, and the ComponentData of these is not set correctly, which is why they don't show.

Reproducible: Always

Steps to Reproduce:
1. Try to open 'adiumxtra://www.adiumxtras.com/download/192' from browser (or pass directly to ktp-adiumxtra-protocol-handler)

Actual Results:  
A "Copying [Finished]" notification is shown. The Adium extra is not installed.

Expected Results:  
I can install the Adium extra.
Comment 1 Leon Handreke 2013-10-12 11:18:44 UTC
The bug report is wrong - the Adium extra is installed, but no feedback is shown (except for the "Copying [Finished]" notification).
Comment 2 Leon Handreke 2013-10-13 11:43:02 UTC
Git commit 831eb9cf482123306f2a2c46ebe2f990fb60949d by Leon Handreke.
Committed on 12/10/2013 at 10:53.
Pushed by leonh into branch 'kde-telepathy-0.7'.

Fix adiumxtra-protocol-handler to show UI to confirm installation again

Don't install the Adium extra automatically but show a notification to
confirm the installation (as was probably originally intended by the
authors of the code).

Disable the KIO progress notification that results in a non-informative
"Copying [Finished]" notification for the temporary file being created.

REVIEW: 113214

M  +38   -35   adiumxtra-protocol-handler/adiumxtra-protocol-handler.cpp
M  +14   -8    adiumxtra-protocol-handler/chat-style-installer.cpp
M  +13   -6    adiumxtra-protocol-handler/emoticon-set-installer.cpp

http://commits.kde.org/telepathy-text-ui/831eb9cf482123306f2a2c46ebe2f990fb60949d
Comment 3 Leon Handreke 2013-10-13 13:09:41 UTC
Git commit c45dbad469d4686819391c5f910617baa40fd41a by Leon Handreke.
Committed on 12/10/2013 at 10:53.
Pushed by leonh into branch 'master'.

Fix adiumxtra-protocol-handler to show UI to confirm installation again

Don't install the Adium extra automatically but show a notification to
confirm the installation (as was probably originally intended by the
authors of the code).

Disable the KIO progress notification that results in a non-informative
"Copying [Finished]" notification for the temporary file being created.

REVIEW: 113214

M  +38   -35   adiumxtra-protocol-handler/adiumxtra-protocol-handler.cpp
M  +14   -8    adiumxtra-protocol-handler/chat-style-installer.cpp
M  +13   -6    adiumxtra-protocol-handler/emoticon-set-installer.cpp

http://commits.kde.org/telepathy-text-ui/c45dbad469d4686819391c5f910617baa40fd41a
Comment 4 Leon Handreke 2013-10-13 13:09:51 UTC
Git commit c45dbad469d4686819391c5f910617baa40fd41a by Leon Handreke.
Committed on 12/10/2013 at 10:53.
Pushed by leonh into branch 'master'.

Fix adiumxtra-protocol-handler to show UI to confirm installation again

Don't install the Adium extra automatically but show a notification to
confirm the installation (as was probably originally intended by the
authors of the code).

Disable the KIO progress notification that results in a non-informative
"Copying [Finished]" notification for the temporary file being created.

REVIEW: 113214

M  +38   -35   adiumxtra-protocol-handler/adiumxtra-protocol-handler.cpp
M  +14   -8    adiumxtra-protocol-handler/chat-style-installer.cpp
M  +13   -6    adiumxtra-protocol-handler/emoticon-set-installer.cpp

http://commits.kde.org/telepathy-text-ui/c45dbad469d4686819391c5f910617baa40fd41a