Fix adiumxtra-protocol-handler to show UI to confirm installation again

Don't install the Adium extra automatically but show a notification to
confirm the installation (as was probably originally intended by the
authors of the code).

Disable the KIO progress notification that results in a non-informative
"Copying [Finished]" notification for the temporary file being created.

REVIEW: 113214
BUG: 325903