adiumxtra-protocol-handler/chat-style-installer.cpp
@@ -28,7 +28,16 @@
 #include <KNotification>
 #include <KApplication>
 #include <QTimer>
+#include <KAboutData>
+#include <KComponentData>
 
+// FIXME: Part of a hack to let adiumxtra-protocol-handler use the main ktelepathy.notifyrc because
+// the string freeze does not permit adding a new notifyrc only for adiumxtra-protocol-handler.
+// Remove this after 0.7 is released.
+static KComponentData ktelepathyComponentData() {
+    KAboutData telepathySharedAboutData("ktelepathy",0,KLocalizedString(),0);
+    return KComponentData(telepathySharedAboutData);
+}
 
 ChatStyleInstaller::ChatStyleInstaller(KArchive *archive, KTemporaryFile *tmpFile)
 {
@@ -132,6 +141,7 @@ void ChatStyleInstaller::showRequest()
     QObject::connect(notification, SIGNAL(action2Activated()), this, SLOT(ignoreRequest()));
     QObject::connect(notification, SIGNAL(action2Activated()), notification, SLOT(close()));
 
+    notification->setComponentData(ktelepathyComponentData());
     notification->sendEvent();
 }
 
@@ -142,18 +152,14 @@ void ChatStyleInstaller::showResult()
     KNotification *notification;
     if(m_status == BundleInstaller::BundleInstallOk) {
         kDebug() << "Installed Chatstyle" << this->bundleName() << "successfully";
-        notification = new KNotification(QLatin1String("chatstyleSuccess"), NULL, KNotification::Persistent);
+        notification = new KNotification(QLatin1String("chatstyleSuccess"));
         notification->setText( i18n("Installed Chatstyle %1 successfully.", this->bundleName()) );
     } else {
         kDebug() << "Installation of Chatstyle" << this->bundleName() << "failed";
-        notification = new KNotification(QLatin1String("chatstyleFailure"), NULL, KNotification::Persistent);
+        notification = new KNotification(QLatin1String("chatstyleFailure"));
         notification->setText( i18n("Installation of Chatstyle %1 failed.", this->bundleName()) );
     }
-
-    notification->setActions( QStringList() << i18n("OK") );
-    QObject::connect(notification, SIGNAL(action1Activated()), notification, SLOT(close()));
-    QObject::connect(notification, SIGNAL(ignored()), notification, SLOT(close()));
-
+    notification->setComponentData(ktelepathyComponentData());
     notification->sendEvent();
 
     Q_EMIT showedResult();
